[gd_scene load_steps=9 format=3 uid="uid://cojr8eoej07a4"]

[ext_resource type="Script" path="res://Settings/Setting.gd" id="1_gngoo"]
[ext_resource type="Texture2D" uid="uid://cu351kommoe2e" path="res://Settings/Images/115801_settings_icon (1).png" id="2_kmdrl"]
[ext_resource type="Texture2D" uid="uid://g6q0y46vmnxc" path="res://Settings/Images/Select.png" id="3_xoy2s"]
[ext_resource type="Texture2D" uid="uid://bwhq5xqnvksjp" path="res://Settings/Images/Pluse.png" id="4_yatc1"]
[ext_resource type="Texture2D" uid="uid://bvnv1mk4ivrkk" path="res://Settings/Images/Minues.png" id="5_k53rw"]
[ext_resource type="Texture2D" uid="uid://tw8nan118o2w" path="res://Settings/Images/resetseing.png" id="6_i5upf"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ico5j"]
specular_color = Color(1, 0.670588, 1, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_7em30"]

[node name="Setting" type="Node2D"]
position = Vector2(14, 11)
script = ExtResource("1_gngoo")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(1477, -11)
scale = Vector2(0.0566406, 0.0576172)
texture_normal = ExtResource("2_kmdrl")
texture_pressed = SubResource("CanvasTexture_ico5j")

[node name="Setting" type="Node2D" parent="."]
position = Vector2(651, 304)

[node name="Increse Pos" type="TouchScreenButton" parent="Setting"]
visible = false
position = Vector2(595, 44)
scale = Vector2(0.166016, 0.191406)
texture_normal = ExtResource("3_xoy2s")

[node name="Increse Pos2" type="TouchScreenButton" parent="Setting"]
visible = false
position = Vector2(679, 236)
rotation = -3.14159
scale = Vector2(0.166016, 0.191406)
texture_normal = ExtResource("3_xoy2s")

[node name="Increse Pos3" type="TouchScreenButton" parent="Setting"]
visible = false
position = Vector2(779, 97)
rotation = 1.5708
scale = Vector2(0.166016, 0.191406)
texture_normal = ExtResource("3_xoy2s")

[node name="Increse Pos4" type="TouchScreenButton" parent="Setting"]
visible = false
position = Vector2(501, 177)
rotation = -1.5708
scale = Vector2(0.166016, 0.191406)
texture_normal = ExtResource("3_xoy2s")

[node name="Size" type="TouchScreenButton" parent="Setting"]
visible = false
position = Vector2(130, -33)
scale = Vector2(0.425781, 0.394531)
texture_normal = ExtResource("4_yatc1")

[node name="Size2" type="TouchScreenButton" parent="Setting"]
visible = false
position = Vector2(377, -28)
scale = Vector2(0.201172, 0.185547)
texture_normal = ExtResource("5_k53rw")

[node name="Reset" type="TouchScreenButton" parent="Setting"]
visible = false
position = Vector2(618, -289)
scale = Vector2(-0.497192, 0.347542)
texture_normal = ExtResource("6_i5upf")
texture_pressed = SubResource("CanvasTexture_7em30")

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="Setting/Increse Pos" to="." method="_up"]
[connection signal="pressed" from="Setting/Increse Pos2" to="." method="_down"]
[connection signal="pressed" from="Setting/Increse Pos3" to="." method="_right"]
[connection signal="pressed" from="Setting/Increse Pos4" to="." method="_left"]
[connection signal="pressed" from="Setting/Size" to="." method="_increse"]
[connection signal="pressed" from="Setting/Size2" to="." method="_decrease"]
[connection signal="pressed" from="Setting/Reset" to="." method="_on_reset_pressed"]
